--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@nuxt/ui": "^4.0.1",
+    "@pinia/nuxt": "^0.11.2",
     "@unovis/ts": "^1.6.1",
     "@unovis/vue": "^1.6.1",
     "date-fns": "^4.1.0",
+    "pinia": "^3.0.3",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1",
     "zod": "^4.1.11"
